--- a/OBD2/Riverdi_70STM32H7.ioc
+++ b/OBD2/Riverdi_70STM32H7.ioc
@@ -115,7 +115,7 @@ FREERTOS_M7.INCLUDE_vTaskCleanUpResources=1
 FREERTOS_M7.INCLUDE_xSemaphoreGetMutexHolder=1
 FREERTOS_M7.INCLUDE_xTaskGetHandle=1
 FREERTOS_M7.IPParameters=Tasks01,configENABLE_FPU,configUSE_NEWLIB_REENTRANT,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,configUSE_IDLE_HOOK,configCHECK_FOR_STACK_OVERFLOW,configUSE_APPLICATION_TASK_TAG,configTIMER_TASK_STACK_DEPTH,INCLUDE_xSemaphoreGetMutexHolder,INCLUDE_vTaskCleanUpResources,FootprintOK,INCLUDE_xTaskGetHandle
-FREERTOS_M7.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;VideoTask,8,4096,videoTaskFunc,As external,NULL,Dynamic,NULL,NULL;TouchGFXTask,8,8192,TouchGFX_Task,As external,NULL,Dynamic,NULL,NULL
+FREERTOS_M7.Tasks01=defaultTask,24,1024,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;VideoTask,8,4096,videoTaskFunc,As external,NULL,Dynamic,NULL,NULL;TouchGFXTask,8,8192,TouchGFX_Task,As external,NULL,Dynamic,NULL,NULL
 FREERTOS_M7.configCHECK_FOR_STACK_OVERFLOW=1
 FREERTOS_M7.configENABLE_FPU=1
 FREERTOS_M7.configMINIMAL_STACK_SIZE=512
@@ -136,6 +136,9 @@ I2C2.Timing=0x00501D55
 I2C4.I2C_Speed_Mode=I2C_Fast
 I2C4.IPParameters=Timing,I2C_Speed_Mode
 I2C4.Timing=0x00B03FDB
+IWDG1.IPParameters=Reload,Prescaler
+IWDG1.Prescaler=IWDG_PRESCALER_32
+IWDG1.Reload=1199
 JPEG.IPParameters=JPEG_RGB_FORMAT
 JPEG.JPEG_RGB_FORMAT=JPEG_RGB888
 KeepUserPlacement=false
@@ -175,41 +178,43 @@ Mcu.IP15=FREERTOS_M7
 Mcu.IP16=I2C1
 Mcu.IP17=I2C2
 Mcu.IP18=I2C4
-Mcu.IP19=JPEG
+Mcu.IP19=IWDG1
 Mcu.IP2=CORTEX_M4
-Mcu.IP20=LPTIM2
-Mcu.IP21=LTDC
-Mcu.IP22=MDMA
-Mcu.IP23=NVIC1
-Mcu.IP24=NVIC2
-Mcu.IP25=PWR
-Mcu.IP26=QUADSPI
-Mcu.IP27=RCC
-Mcu.IP28=RNG
-Mcu.IP29=RTC
+Mcu.IP20=IWDG2
+Mcu.IP21=JPEG
+Mcu.IP22=LPTIM2
+Mcu.IP23=LTDC
+Mcu.IP24=MDMA
+Mcu.IP25=NVIC1
+Mcu.IP26=NVIC2
+Mcu.IP27=PWR
+Mcu.IP28=QUADSPI
+Mcu.IP29=RCC
 Mcu.IP3=CORTEX_M7
-Mcu.IP30=SDMMC1
-Mcu.IP31=SPI1
-Mcu.IP32=SPI2
-Mcu.IP33=SYS
-Mcu.IP34=SYS_M4
-Mcu.IP35=TIM1
-Mcu.IP36=TIM3
-Mcu.IP37=TIM5
-Mcu.IP38=TIM15
-Mcu.IP39=UART4
+Mcu.IP30=RNG
+Mcu.IP31=RTC
+Mcu.IP32=SDMMC1
+Mcu.IP33=SPI1
+Mcu.IP34=SPI2
+Mcu.IP35=SYS
+Mcu.IP36=SYS_M4
+Mcu.IP37=TIM1
+Mcu.IP38=TIM3
+Mcu.IP39=TIM5
 Mcu.IP4=CRC
-Mcu.IP40=UART8
-Mcu.IP41=USART1
-Mcu.IP42=USART2
-Mcu.IP43=USB_HOST_M7
-Mcu.IP44=USB_OTG_HS
+Mcu.IP40=TIM15
+Mcu.IP41=UART4
+Mcu.IP42=UART8
+Mcu.IP43=USART1
+Mcu.IP44=USART2
+Mcu.IP45=USB_HOST_M7
+Mcu.IP46=USB_OTG_HS
 Mcu.IP5=DAC1
 Mcu.IP6=DEBUG
 Mcu.IP7=DFSDM1
 Mcu.IP8=DMA2D
 Mcu.IP9=DSIHOST
-Mcu.IPNb=45
+Mcu.IPNb=47
 Mcu.Name=STM32H757XIHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PI6
@@ -273,16 +278,18 @@ Mcu.Pin15=PB6
 Mcu.Pin150=VP_DMA2D_VS_DMA2D
 Mcu.Pin151=VP_FATFS_M7_VS_SDIO
 Mcu.Pin152=VP_FREERTOS_M7_VS_CMSIS_V2
-Mcu.Pin153=VP_JPEG_VS_JPEG
-Mcu.Pin154=VP_LTDC_DSIMode
-Mcu.Pin155=VP_RNG_VS_RNG
-Mcu.Pin156=VP_RTC_VS_RTC_Activate
-Mcu.Pin157=VP_SYS_VS_tim2
-Mcu.Pin158=VP_SYS_M4_VS_Systick
-Mcu.Pin159=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin153=VP_IWDG1_VS_IWDG
+Mcu.Pin154=VP_IWDG2_VS_IWDG
+Mcu.Pin155=VP_JPEG_VS_JPEG
+Mcu.Pin156=VP_LTDC_DSIMode
+Mcu.Pin157=VP_RNG_VS_RNG
+Mcu.Pin158=VP_RTC_VS_RTC_Activate
+Mcu.Pin159=VP_SYS_VS_tim2
 Mcu.Pin16=PB4 (NJTRST)
-Mcu.Pin160=VP_USB_HOST_M7_VS_USB_HOST_MSC_HS
-Mcu.Pin161=VP_STMicroelectronics.X-CUBE-TOUCHGFX_M7_VS_GraphicsJjApplication_4.25.0
+Mcu.Pin160=VP_SYS_M4_VS_Systick
+Mcu.Pin161=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin162=VP_USB_HOST_M7_VS_USB_HOST_MSC_HS
+Mcu.Pin163=VP_STMicroelectronics.X-CUBE-TOUCHGFX_M7_VS_GraphicsJjApplication_4.25.0
 Mcu.Pin17=PG11
 Mcu.Pin18=PD6
 Mcu.Pin19=PD3
@@ -374,7 +381,7 @@ Mcu.Pin96=PE10
 Mcu.Pin97=PJ8
 Mcu.Pin98=PH4
 Mcu.Pin99=PH5
-Mcu.PinsNb=162
+Mcu.PinsNb=164
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.25.0
 Mcu.ThirdParty0_ContextShortName=M7
 Mcu.ThirdParty0_Instance=STMicroelectronics.X-CUBE-TOUCHGFX.4.25.0_M7
@@ -444,7 +451,7 @@ NVIC1.ForceEnableDMAVector=true
 NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC1.JPEG_IRQn=true\:7\:0\:true\:false\:true\:true\:false\:true\:true
 NVIC1.LTDC_IRQn=true\:5\:0\:true\:false\:true\:true\:false\:true\:true
-NVIC1.MDMA_IRQn=true\:8\:0\:true\:false\:true\:true\:false\:false\:true
+NVIC1.MDMA_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:false\:true
 NVIC1.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC1.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC1.OTG_HS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
@@ -506,7 +513,7 @@ PA11.Signal=FDCAN1_RX
 PA12.GPIOParameters=GPIO_Speed,PinAttribute
 PA12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA12.Locked=true
-PA12.Mode=Full_Duplex_Master
+PA12.Mode=RX_Only_Simplex_Unidirect_Master
 PA12.PinAttribute=CortexM7
 PA12.Signal=SPI2_SCK
 PA13\ (JTMS/SWDIO).GPIOParameters=PinAttribute
@@ -708,7 +715,7 @@ PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
 PC2.GPIOParameters=GPIO_Speed,PinAttribute
 PC2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC2.Locked=true
-PC2.Mode=Full_Duplex_Master
+PC2.Mode=RX_Only_Simplex_Unidirect_Master
 PC2.PinAttribute=CortexM7
 PC2.Signal=SPI2_MISO
 PC2_C.GPIOParameters=PinAttribute
@@ -718,7 +725,6 @@ PC2_C.Signal=ADC3_INN1
 PC3.GPIOParameters=GPIO_Speed,PinAttribute
 PC3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC3.Locked=true
-PC3.Mode=Full_Duplex_Master
 PC3.PinAttribute=CortexM7
 PC3.Signal=SPI2_MOSI
 PC3_C.GPIOParameters=PinAttribute
@@ -1360,7 +1366,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_MDMA_Init-MDMA-false-HAL-true-CortexM7,4-MX_LTDC_Init-LTDC-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-true-HAL-true-CortexM7,6-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true-CortexM7,7-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,8-MX_I2C4_Init-I2C4-false-HAL-true-CortexM7,9-MX_DAC1_Init-DAC1-false-HAL-true-CortexM7,10-MX_DMA2D_Init-DMA2D-false-HAL-true-CortexM7,11-MX_FDCAN1_Init-FDCAN1-false-HAL-true-CortexM7,12-MX_FDCAN2_Init-FDCAN2-false-HAL-true-CortexM7,13-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,14-MX_TIM1_Init-TIM1-false-HAL-true-CortexM7,15-MX_TIM5_Init-TIM5-false-HAL-true-CortexM7,16-MX_UART4_Init-UART4-false-HAL-true-CortexM7,17-MX_UART8_Init-UART8-false-HAL-true-CortexM7,18-MX_USART2_UART_Init-USART2-true-HAL-false-CortexM7,19-MX_CRC_Init-CRC-false-HAL-true-CortexM7,20-MX_DFSDM1_Init-DFSDM1-true-HAL-false-CortexM7,21-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,22-MX_LPTIM2_Init-LPTIM2-false-HAL-true-CortexM7,23-MX_SPI2_Init-SPI2-false-HAL-true-CortexM7,24-MX_TIM3_Init-TIM3-true-HAL-false-CortexM7,25-MX_TIM15_Init-TIM15-false-HAL-true-CortexM7,26-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true-CortexM7,27-MX_RNG_Init-RNG-false-HAL-true-CortexM7,28-MX_FMC_Init-FMC-false-HAL-true-CortexM7,29-MX_JPEG_Init-JPEG-false-HAL-true-CortexM7,30-MX_RTC_Init-RTC-false-HAL-true-CortexM7,31-MX_ADC1_Init-ADC1-false-HAL-true-CortexM7,32-MX_ADC3_Init-ADC3-false-HAL-true-CortexM7,33-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,34-MX_FREERTOS_Init-FREERTOS_M7-false-HAL-false-CortexM7,35-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,36-MX_ETH_Init-ETH-true-HAL-true-CortexM7,37-MX_USB_HOST_Init-USB_HOST_M7-false-HAL-false-CortexM7,38-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.25.0_M7-false-HAL-false-CortexM7,false-1-MX_MDMA_Init-MDMA-false-HAL-true-CortexM4,0-MX_PWR_Init-PWR-false-HAL-true-CortexM7,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,39-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.25.0_M7-false-HAL-false-CortexM7,0-MX_PWR_Init-PWR-true-HAL-false-CortexM4,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_MDMA_Init-MDMA-false-HAL-true-CortexM7,4-MX_LTDC_Init-LTDC-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-true-HAL-true-CortexM7,6-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true-CortexM7,7-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,8-MX_I2C4_Init-I2C4-false-HAL-true-CortexM7,9-MX_DAC1_Init-DAC1-false-HAL-true-CortexM7,10-MX_DMA2D_Init-DMA2D-false-HAL-true-CortexM7,11-MX_FDCAN1_Init-FDCAN1-false-HAL-true-CortexM7,12-MX_FDCAN2_Init-FDCAN2-false-HAL-true-CortexM7,13-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,14-MX_TIM1_Init-TIM1-false-HAL-true-CortexM7,15-MX_TIM5_Init-TIM5-false-HAL-true-CortexM7,16-MX_UART4_Init-UART4-false-HAL-true-CortexM7,17-MX_UART8_Init-UART8-false-HAL-true-CortexM7,18-MX_USART2_UART_Init-USART2-true-HAL-false-CortexM7,19-MX_CRC_Init-CRC-false-HAL-true-CortexM7,20-MX_DFSDM1_Init-DFSDM1-true-HAL-false-CortexM7,21-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,22-MX_LPTIM2_Init-LPTIM2-false-HAL-true-CortexM7,23-MX_SPI2_Init-SPI2-false-HAL-true-CortexM7,24-MX_TIM3_Init-TIM3-true-HAL-false-CortexM7,25-MX_TIM15_Init-TIM15-false-HAL-true-CortexM7,26-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true-CortexM7,27-MX_RNG_Init-RNG-false-HAL-true-CortexM7,28-MX_FMC_Init-FMC-false-HAL-true-CortexM7,29-MX_JPEG_Init-JPEG-false-HAL-true-CortexM7,30-MX_RTC_Init-RTC-false-HAL-true-CortexM7,31-MX_ADC1_Init-ADC1-false-HAL-true-CortexM7,32-MX_ADC3_Init-ADC3-false-HAL-true-CortexM7,33-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,34-MX_FREERTOS_Init-FREERTOS_M7-false-HAL-false-CortexM7,35-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,36-MX_ETH_Init-ETH-true-HAL-true-CortexM7,37-MX_USB_HOST_Init-USB_HOST_M7-false-HAL-false-CortexM7,38-MX_IWDG1_Init-IWDG1-false-HAL-true-CortexM7,41-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.25.0_M7-false-HAL-false-CortexM7,false-1-MX_MDMA_Init-MDMA-false-HAL-true-CortexM4,2-MX_IWDG2_Init-IWDG2-false-HAL-true-CortexM4,0-MX_PWR_Init-PWR-false-HAL-true-CortexM7,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,42-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.25.0_M7-false-HAL-false-CortexM7,0-MX_PWR_Init-PWR-true-HAL-false-CortexM4,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_3_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FlashSize=27
@@ -1621,10 +1627,10 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,NSSPMode,BaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI1.VirtualType=VM_MASTER
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI2.CalculateBaudRate=10.0 MBits/s
-SPI2.DataSize=SPI_DATASIZE_8BIT
-SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI2.CalculateBaudRate=156.25 KBits/s
+SPI2.DataSize=SPI_DATASIZE_16BIT
+SPI2.Direction=SPI_DIRECTION_2LINES_RXONLY
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize,NSSPMode
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.NSSPMode=SPI_NSS_PULSE_DISABLE
@@ -1694,6 +1700,10 @@ VP_FATFS_M7_VS_SDIO.Mode=SDIO
 VP_FATFS_M7_VS_SDIO.Signal=FATFS_M7_VS_SDIO
 VP_FREERTOS_M7_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_M7_VS_CMSIS_V2.Signal=FREERTOS_M7_VS_CMSIS_V2
+VP_IWDG1_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG1_VS_IWDG.Signal=IWDG1_VS_IWDG
+VP_IWDG2_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG2_VS_IWDG.Signal=IWDG2_VS_IWDG
 VP_JPEG_VS_JPEG.Mode=JPEG_Activate
 VP_JPEG_VS_JPEG.Signal=JPEG_VS_JPEG
 VP_LTDC_DSIMode.Mode=RGB888
@@ -1715,4 +1725,4 @@ VP_USB_HOST_M7_VS_USB_HOST_MSC_HS.Signal=USB_HOST_M7_VS_USB_HOST_MSC_HS
 board=STM32H757I-EVAL
 boardIOC=true
 rtos.0.ip=FREERTOS_M7
-rtos.0.tasks.0=allocationType,Dynamic;bufferName,NULL;codeGen,Default;controlBlockName,NULL;entry,StartDefaultTask;name,defaultTask;parameter,NULL;priority,osPriorityNormal;stackSize,128
+isbadioc=false
