--- a/OBD2/Riverdi_70STM32H7.ioc
+++ b/OBD2/Riverdi_70STM32H7.ioc
@@ -1,12 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag,master,SingleDiff-0\#ChannelRegularConversion
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag,master
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
 ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SingleDiff-0\#ChannelRegularConversion=ADC_DIFFERENTIAL_ENDED
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
 ADC1.master=1
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag
@@ -115,7 +114,7 @@ FREERTOS_M7.INCLUDE_vTaskCleanUpResources=1
 FREERTOS_M7.INCLUDE_xSemaphoreGetMutexHolder=1
 FREERTOS_M7.INCLUDE_xTaskGetHandle=1
 FREERTOS_M7.IPParameters=Tasks01,configENABLE_FPU,configUSE_NEWLIB_REENTRANT,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,configUSE_IDLE_HOOK,configCHECK_FOR_STACK_OVERFLOW,configUSE_APPLICATION_TASK_TAG,configTIMER_TASK_STACK_DEPTH,INCLUDE_xSemaphoreGetMutexHolder,INCLUDE_vTaskCleanUpResources,FootprintOK,INCLUDE_xTaskGetHandle
-FREERTOS_M7.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;VideoTask,8,4096,videoTaskFunc,As external,NULL,Dynamic,NULL,NULL;TouchGFXTask,8,8192,TouchGFX_Task,As external,NULL,Dynamic,NULL,NULL
+FREERTOS_M7.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;VideoTask,8,4096,videoTaskFunc,As external,NULL,Dynamic,NULL,NULL;TouchGFXTask,8,8192,TouchGFX_Task,As external,NULL,Dynamic,NULL,NULL;Aquisition_task,8,1024,StartAquisition,Default,NULL,Dynamic,NULL,NULL
 FREERTOS_M7.configCHECK_FOR_STACK_OVERFLOW=1
 FREERTOS_M7.configENABLE_FPU=1
 FREERTOS_M7.configMINIMAL_STACK_SIZE=512
@@ -197,19 +196,18 @@ Mcu.IP35=TIM1
 Mcu.IP36=TIM3
 Mcu.IP37=TIM5
 Mcu.IP38=TIM15
-Mcu.IP39=UART4
+Mcu.IP39=UART8
 Mcu.IP4=CRC
-Mcu.IP40=UART8
-Mcu.IP41=USART1
-Mcu.IP42=USART2
-Mcu.IP43=USB_HOST_M7
-Mcu.IP44=USB_OTG_HS
+Mcu.IP40=USART1
+Mcu.IP41=USART2
+Mcu.IP42=USB_HOST_M7
+Mcu.IP43=USB_OTG_HS
 Mcu.IP5=DAC1
 Mcu.IP6=DEBUG
 Mcu.IP7=DFSDM1
 Mcu.IP8=DMA2D
 Mcu.IP9=DSIHOST
-Mcu.IPNb=45
+Mcu.IPNb=44
 Mcu.Name=STM32H757XIHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PI6
@@ -473,11 +471,8 @@ NVIC2.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC2.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC2.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0.GPIOParameters=GPIO_Speed,GPIO_Label,PinAttribute
-PA0.GPIO_Label=RS485_TX
-PA0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA0.GPIOParameters=PinAttribute
 PA0.Locked=true
-PA0.Mode=Asynchronous
 PA0.PinAttribute=CortexM7
 PA0.Signal=UART4_TX
 PA0_C.GPIOParameters=PinAttribute
@@ -522,7 +517,6 @@ PA15\ (JTDI).GPIOParameters=GPIO_Speed,GPIO_Label,PinAttribute
 PA15\ (JTDI).GPIO_Label=RS485_DE
 PA15\ (JTDI).GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA15\ (JTDI).Locked=true
-PA15\ (JTDI).Mode=Hardware Flow Control (RS485)
 PA15\ (JTDI).PinAttribute=CortexM7
 PA15\ (JTDI).Signal=UART4_DE
 PA1_C.GPIOParameters=PinAttribute
@@ -666,7 +660,6 @@ PB8.GPIOParameters=GPIO_Speed,GPIO_Label,PinAttribute
 PB8.GPIO_Label=RS485_RX
 PB8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB8.Locked=true
-PB8.Mode=Asynchronous
 PB8.PinAttribute=CortexM7
 PB8.Signal=UART4_RX
 PB9.GPIOParameters=GPIO_Speed,GPIO_Label,PinAttribute
@@ -1367,7 +1360,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_MDMA_Init-MDMA-false-HAL-true-CortexM7,4-MX_LTDC_Init-LTDC-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-true-HAL-true-CortexM7,6-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true-CortexM7,7-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,8-MX_I2C4_Init-I2C4-false-HAL-true-CortexM7,9-MX_DAC1_Init-DAC1-false-HAL-true-CortexM7,10-MX_DMA2D_Init-DMA2D-false-HAL-true-CortexM7,11-MX_FDCAN1_Init-FDCAN1-false-HAL-true-CortexM7,12-MX_FDCAN2_Init-FDCAN2-false-HAL-true-CortexM7,13-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,14-MX_TIM1_Init-TIM1-false-HAL-true-CortexM7,15-MX_TIM5_Init-TIM5-false-HAL-true-CortexM7,16-MX_UART4_Init-UART4-false-HAL-true-CortexM7,17-MX_UART8_Init-UART8-false-HAL-true-CortexM7,18-MX_USART2_UART_Init-USART2-true-HAL-false-CortexM7,19-MX_CRC_Init-CRC-false-HAL-true-CortexM7,20-MX_DFSDM1_Init-DFSDM1-true-HAL-false-CortexM7,21-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,22-MX_LPTIM2_Init-LPTIM2-false-HAL-true-CortexM7,23-MX_SPI2_Init-SPI2-false-HAL-true-CortexM7,24-MX_TIM3_Init-TIM3-true-HAL-false-CortexM7,25-MX_TIM15_Init-TIM15-false-HAL-true-CortexM7,26-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true-CortexM7,27-MX_RNG_Init-RNG-false-HAL-true-CortexM7,28-MX_FMC_Init-FMC-false-HAL-true-CortexM7,29-MX_JPEG_Init-JPEG-false-HAL-true-CortexM7,30-MX_RTC_Init-RTC-false-HAL-true-CortexM7,31-MX_ADC1_Init-ADC1-false-HAL-true-CortexM7,32-MX_ADC3_Init-ADC3-false-HAL-true-CortexM7,33-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,34-MX_FREERTOS_Init-FREERTOS_M7-false-HAL-false-CortexM7,35-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,36-MX_ETH_Init-ETH-true-HAL-true-CortexM7,37-MX_USB_HOST_Init-USB_HOST_M7-false-HAL-false-CortexM7,40-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.25.0_M7-false-HAL-false-CortexM7,false-1-MX_MDMA_Init-MDMA-false-HAL-true-CortexM4,0-MX_PWR_Init-PWR-false-HAL-true-CortexM7,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,41-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.25.0_M7-false-HAL-false-CortexM7,0-MX_PWR_Init-PWR-true-HAL-false-CortexM4,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_MDMA_Init-MDMA-false-HAL-true-CortexM7,4-MX_LTDC_Init-LTDC-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-true-HAL-true-CortexM7,6-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true-CortexM7,7-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,8-MX_I2C4_Init-I2C4-false-HAL-true-CortexM7,9-MX_DAC1_Init-DAC1-false-HAL-true-CortexM7,10-MX_DMA2D_Init-DMA2D-false-HAL-true-CortexM7,11-MX_FDCAN1_Init-FDCAN1-false-HAL-true-CortexM7,12-MX_FDCAN2_Init-FDCAN2-false-HAL-true-CortexM7,13-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,14-MX_TIM1_Init-TIM1-false-HAL-true-CortexM7,15-MX_TIM5_Init-TIM5-false-HAL-true-CortexM7,16-MX_UART8_Init-UART8-false-HAL-true-CortexM7,17-MX_USART2_UART_Init-USART2-true-HAL-false-CortexM7,18-MX_CRC_Init-CRC-false-HAL-true-CortexM7,19-MX_DFSDM1_Init-DFSDM1-true-HAL-false-CortexM7,20-MX_I2C2_Init-I2C2-false-HAL-true-CortexM7,21-MX_LPTIM2_Init-LPTIM2-false-HAL-true-CortexM7,22-MX_SPI2_Init-SPI2-false-HAL-true-CortexM7,23-MX_TIM3_Init-TIM3-true-HAL-false-CortexM7,24-MX_TIM15_Init-TIM15-false-HAL-true-CortexM7,25-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true-CortexM7,26-MX_RNG_Init-RNG-false-HAL-true-CortexM7,27-MX_FMC_Init-FMC-false-HAL-true-CortexM7,28-MX_JPEG_Init-JPEG-false-HAL-true-CortexM7,29-MX_RTC_Init-RTC-false-HAL-true-CortexM7,30-MX_ADC1_Init-ADC1-false-HAL-true-CortexM7,31-MX_ADC3_Init-ADC3-false-HAL-true-CortexM7,32-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,33-MX_FREERTOS_Init-FREERTOS_M7-false-HAL-false-CortexM7,34-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,35-MX_ETH_Init-ETH-true-HAL-true-CortexM7,36-MX_USB_HOST_Init-USB_HOST_M7-false-HAL-false-CortexM7,39-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.25.0_M7-false-HAL-false-CortexM7,false-1-MX_MDMA_Init-MDMA-false-HAL-true-CortexM4,0-MX_PWR_Init-PWR-false-HAL-true-CortexM7,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,40-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.25.0_M7-false-HAL-false-CortexM7,0-MX_PWR_Init-PWR-true-HAL-false-CortexM4,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_3_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FlashSize=27
@@ -1487,10 +1480,10 @@ RCC.VCOInput1Freq_Value=4000000
 RCC.VCOInput2Freq_Value=4000000
 RCC.VCOInput3Freq_Value=1333333.3333333333
 SH.ADCx_INN1.0=ADC2_INN1
-SH.ADCx_INN1.1=ADC1_INN1,IN1-Differential
+SH.ADCx_INN1.1=ADC1_INN1
 SH.ADCx_INN1.ConfNb=2
 SH.ADCx_INP1.0=ADC2_INP1
-SH.ADCx_INP1.1=ADC1_INP1,IN1-Differential
+SH.ADCx_INP1.1=ADC1_INP1,IN1-Single-Ended
 SH.ADCx_INP1.ConfNb=2
 SH.COMP_DAC11_group.0=DAC1_OUT1,DAC_OUT1
 SH.COMP_DAC11_group.ConfNb=1
